--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razer United States | For Gamers. By Gamers.</title>
+    <link rel="icon" href="https://assets2.razerzone.com/images/phoenix/razer-ths-logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="is-active">
+    <nav class="main-nav">
         <li><a href="index.html">
                 <img class="logo" src="https://assets2.razerzone.com/images/phoenix/razer-ths-logo.svg" alt="Razer">
             </a></li>
@@ -34,15 +35,15 @@
     <button class="hamburger">
         <div class="bar"></div>
     </button>
-    <div class="cart is-active">
+    <div class="cart">
         <a href="#">&#128722;</a>
     </div>
 
-    <div class="mobile-nav">
+    <div class="mobile-nav is-active">
         <input type="text" class="mobile-nav-search" placeholder="Search razer.com">
         <ul>
             <li><a href="#">Store</a></li>
-            <li><a href="#">PC</a></li>
+            <li><a href="#">PC <span class="icon-angle-left"></span></span></a></li>
             <li><a href="#">Console</a></li>
             <li><a href="#">Mobile</a></li>
             <li><a href="#">Lifestyle</a></li>
