added first section

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         <li><a href="#">&#x1F50D;</a></li>
         <li><a href="#">&#128722;</a></li>
     </nav>
-    <!-- <div class="hamburger">
-        <div class="hamburger-btn" role="button"><img src="https://www.razer.com/assets/images/mobile-menu.svg"></div>
-    </div> -->
+
+    <div class="notification">RazerStore Rewards Giveaway: Become a member and stand to win both the Razer Kitsune and
+        the PlayStation 5. <a href="https://www.razer.com/store/rewards" class="notification-link"> Join Now > </a>
+    </div>
 
     <button class="hamburger">
         <div class="bar"></div>
@@ -43,7 +44,7 @@
         <input type="text" class="mobile-nav-search" placeholder="Search razer.com">
         <ul>
             <li><a href="#">Store</a></li>
-            <li><a href="#">PC <span class="icon-angle-left"></span></span></a></li>
+            <li><a href="#">PC <span class="icon-angle-left"></span></a></li>
             <li><a href="#">Console</a></li>
             <li><a href="#">Mobile</a></li>
             <li><a href="#">Lifestyle</a></li>
@@ -52,8 +53,37 @@
             <li><a href="#">Support</a></li>
         </ul>
     </div>
-    <section>
-
+    <section class="section-1">
+        <a href="#" class="picture-1-link">
+            <img src="https://assets2.razerzone.com/images/pnx.assets/a04e3f25d77365db4968d10fea66aa8e/cyber-weekend-early-access-2023-homepage-desktop2x.webp"
+                alt="img" class="picture-1-img">
+            <div class="picture-1">
+                <h1 class="picture-1-h1">CYBER RAMPAGE IMMINENT</h1>
+                <h2>UNLOCK EARLY ACCESS NOW</h2>
+                <h3>Shop Now<span class="icon-angle-left"></span></h3>
+            </div>
+        </a>
+        <a href="#" class="picture-1-link">
+            <img src="https://assets2.razerzone.com/images/pnx.assets/19139469bcc62860c37806cc9355cdf1/razer-immersive-campaign-homepage-desktop2x.webp"
+                alt="img" class="picture-1-img">
+            <div class="picture-1">
+                <h1 class="picture-1-h1">THE RAZER IMMERSIVE LINE</h1>
+                <h2>MAXIMUM IMMERSION: ACTIVATED</h2>
+                <h3>Learn More<span class="icon-angle-left"></span></h3>
+            </div>
+        </a>
+        <a href="#" class="picture-1-link">
+            <img src="https://assets2.razerzone.com/images/pnx.assets/19139469bcc62860c37806cc9355cdf1/razer-blade16-lamborghini-homepage-desktop2x.webp"
+                alt="img" class="picture-1-img">
+            <div class="picture-1">
+                <h1 class="picture-1-h1">NEW RAZER BLADE 16</h1>
+                <h2>AUTOMOBILI LAMBORGHINI EDITION</h2>
+                <div class="temp-div">
+                    <h3>Learn More<span class="icon-angle-left"></span></h3>
+                    <h3>Buy <span class="icon-angle-left"></span></h3>
+                </div>
+            </div>
+        </a>
     </section>
 
     <script src="script.js"></script>
