--- a/index.html
+++ b/index.html
@@ -53,41 +53,118 @@
             <li><a href="#">Support</a></li>
         </ul>
     </div>
-    <section class="section-1">
-        <a href="#" class="picture-1-link">
-            <img src="https://assets2.razerzone.com/images/pnx.assets/a04e3f25d77365db4968d10fea66aa8e/cyber-weekend-early-access-2023-homepage-desktop2x.webp"
-                alt="img" class="picture-1-img">
-            <div class="picture-1">
-                <h1 class="picture-1-h1">CYBER RAMPAGE IMMINENT</h1>
-                <h2>UNLOCK EARLY ACCESS NOW</h2>
-                <h3>Shop Now<span class="icon-angle-left"></span></h3>
-            </div>
-        </a>
-        <a href="#" class="picture-1-link">
-            <img src="https://assets2.razerzone.com/images/pnx.assets/19139469bcc62860c37806cc9355cdf1/razer-immersive-campaign-homepage-desktop2x.webp"
-                alt="img" class="picture-1-img">
-            <div class="picture-1">
-                <h1 class="picture-1-h1">THE RAZER IMMERSIVE LINE</h1>
-                <h2>MAXIMUM IMMERSION: ACTIVATED</h2>
-                <h3>Learn More<span class="icon-angle-left"></span></h3>
-            </div>
-        </a>
-        <a href="#" class="picture-1-link">
-            <img src="https://assets2.razerzone.com/images/pnx.assets/19139469bcc62860c37806cc9355cdf1/razer-blade16-lamborghini-homepage-desktop2x.webp"
-                alt="img" class="picture-1-img">
-            <div class="picture-1">
-                <h1 class="picture-1-h1">NEW RAZER BLADE 16</h1>
-                <h2>AUTOMOBILI LAMBORGHINI EDITION</h2>
-                <div class="temp-div">
-                    <h3>Learn More<span class="icon-angle-left"></span></h3>
-                    <h3>Buy <span class="icon-angle-left"></span></h3>
+    <main class="">
+        <section class="section-1">
+            <a href="#" class="picture-1-link">
+                <img src="https://assets2.razerzone.com/images/pnx.assets/a04e3f25d77365db4968d10fea66aa8e/cyber-weekend-early-access-2023-homepage-desktop2x.webp"
+                    alt="img" class="picture-1-img">
+                <div class="picture-1">
+                    <h1 class="picture-1-h1">CYBER RAMPAGE IMMINENT</h1>
+                    <h2>UNLOCK EARLY ACCESS NOW</h2>
+                    <h3>Shop Now<span class="icon-angle-left"></span></h3>
                 </div>
-            </div>
-        </a>
-    </section>
+            </a>
+            <a href="#" class="picture-1-link">
+                <img src="https://assets2.razerzone.com/images/pnx.assets/19139469bcc62860c37806cc9355cdf1/razer-immersive-campaign-homepage-desktop2x.webp"
+                    alt="img" class="picture-1-img">
+                <div class="picture-1">
+                    <h1 class="picture-1-h1">THE RAZER IMMERSIVE LINE</h1>
+                    <h2>MAXIMUM IMMERSION: ACTIVATED</h2>
+                    <h3>Learn More<span class="icon-angle-left"></span></h3>
+                </div>
+            </a>
+            <a href="#" class="picture-1-link">
+                <img src="https://assets2.razerzone.com/images/pnx.assets/19139469bcc62860c37806cc9355cdf1/razer-blade16-lamborghini-homepage-desktop2x.webp"
+                    alt="img" class="picture-1-img">
+                <div class="picture-1">
+                    <h1 class="picture-1-h1">NEW RAZER BLADE 16</h1>
+                    <h2>AUTOMOBILI LAMBORGHINI EDITION</h2>
+                    <div class="temp-div">
+                        <h3>Learn More<span class="icon-angle-left"></span></h3>
+                        <h3>Buy <span class="icon-angle-left"></span></h3>
+                    </div>
+                </div>
+            </a>
+        </section>
 
-    <script src="script.js"></script>
+        <section class="section-2">
+            <ul>
+                <li class="picture-2-li">
+                    <div class="picture-2">
+                        <a href="#" class="picture-2-link">
+                        </a>
+                        <img src="https://assets2.razerzone.com/images/pnx.assets/65d476e8aff78d448b6b3233350f1bb0/fujin-pro-b-950x580-desktop.webp"
+                            alt="img" class="picture-2-img">
+                        <h1 class="picture-2-h1">THE RAZER FUJIN PRO</h1>
+                        <h2>PLAY HARD. BREATH EASY.</h2>
+                        <div class="temp-div">
+                            <h3>Learn More<span class="icon-angle-left"></span></h3>
+                            <h3>Buy <span class="icon-angle-left"></span></h3>
+                        </div>
+                    </div>
+                </li>
+                <li class="picture-2-li">
+                    <div class="picture-2">
+                        <a href="#" class="picture-2-link">
+                        </a>
+                        <img src="mercury.webp" alt="img" class="picture-2-img">
+                        <h1 class="picture-2-h1">RAZER BLADE 16 & 18 MERCURY</h1>
+                        <h2>GET A RAZER GIFT CARD OF UP TO US$400</h2>
+                        <div class="temp-div">
+                            <h3>Razer Blade 16<span class="icon-angle-left"></span></h3>
+                            <h3>Razer Blade 18<span class="icon-angle-left"></span></h3>
+                        </div>
+                    </div>
+                </li>
+                <li class="picture-2-li">
+                    <div class="picture-2">
+                        <a href="#" class="picture-2-link">
+                        </a>
+                        <img src="https://assets2.razerzone.com/images/pnx.assets/65d476e8aff78d448b6b3233350f1bb0/dolce&gabbana-launch-b-950x580-desktop.webp"
+                            alt="img" class="picture-2-img">
+                        <h1 class="picture-2-h1">DOLCE&GABBANA | RAZER</h1>
+                        <h2>STYLED TO WIN</h2>
+                        <h3>Learn More<span class="icon-angle-left"></span></h3>
+                    </div>
+                </li>
+                <li class="picture-2-li">
+                    <div class="picture-2">
+                        <a href="#" class="picture-2-link">
+                        </a>
+                        <img src="https://assets2.razerzone.com/images/pnx.assets/65d476e8aff78d448b6b3233350f1bb0/global-esports-awards-b-950x580-desktop.webp"
+                            alt="img" class="picture-2-img">
+                        <h1 class="picture-2-h1">RAZER VIPER MINI SIGNATURE EDITION</h1>
+                        <h2>ESPORTS HARDWARE PIECE OF THE YEAR</h2>
+                        <h3>Vote for Us<span class="icon-angle-left"></span></h3>
+                    </div>
+                </li>
+                <li class="picture-2-li">
+                    <div class="picture-2">
+                        <a href="#" class="picture-2-link">
+                        </a>
+                        <img src="https://assets2.razerzone.com/images/pnx.assets/65d476e8aff78d448b6b3233350f1bb0/sneki-snek-b-950x580-desktop.webp"
+                            alt="img" class="picture-2-img">
+                        <h1 class="picture-2-h1">DECK THE HALLS WITH SNEKI SNEK</h1>
+                        <h2>DOUBLE THE TREES, DOUBLE THE JOY</h2>
+                        <h3>Learn More<span class="icon-angle-left"></span></h3>
+                    </div>
+                </li>
+                <li class="picture-2-li">
+                    <div class="picture-2">
+                        <a href="#" class="picture-2-link">
+                        </a>
+                        <img src="https://assets2.razerzone.com/images/pnx.assets/65d476e8aff78d448b6b3233350f1bb0/ebonus-card-b-950x580-desktop.webp"
+                            alt="img" class="picture-2-img">
+                        <h1 class="picture-2-h1">GETTING A RAZER GIFT CARD?</h1>
+                        <h2>GET A BONUS ONE ON US</h2>
+                        <h3>Shop Now<span class="icon-angle-left"></span></h3>
+                    </div>
+                </li>
+            </ul>
+        </section>
 
+        <script src="script.js"></script>
+    </main>
 </body>
 
 
