--- a/index.html
+++ b/index.html
@@ -65,12 +65,15 @@
                 </div>
             </a>
             <a href="#" class="picture-1-link">
-                <img src="https://assets2.razerzone.com/images/pnx.assets/19139469bcc62860c37806cc9355cdf1/razer-immersive-campaign-homepage-desktop2x.webp"
+                <img src="https://assets2.razerzone.com/images/pnx.assets/a04e3f25d77365db4968d10fea66aa8e/world-championship-faker-homepage-desktop2x.webp"
                     alt="img" class="picture-1-img">
                 <div class="picture-1">
-                    <h1 class="picture-1-h1">THE RAZER IMMERSIVE LINE</h1>
-                    <h2>MAXIMUM IMMERSION: ACTIVATED</h2>
-                    <h3>Learn More<span class="icon-angle-left"></span></h3>
+                    <h1 class="picture-1-h1">THE RAZER DEATHADDER V3 PRO</h1>
+                    <h2>VALIDATED BY THE NEW 4-TIME CHAMP</h2>
+                    <div class="temp-div">
+                        <h3>Learn More<span class="icon-angle-left"></span></h3>
+                        <h3> Buy Now<span class="icon-angle-left"></span></h3>
+                    </div>
                 </div>
             </a>
             <a href="#" class="picture-1-link">
@@ -81,7 +84,7 @@
                     <h2>AUTOMOBILI LAMBORGHINI EDITION</h2>
                     <div class="temp-div">
                         <h3>Learn More<span class="icon-angle-left"></span></h3>
-                        <h3>Buy <span class="icon-angle-left"></span></h3>
+                        <h3> Buy <span class="icon-angle-left"></span></h3>
                     </div>
                 </div>
             </a>
@@ -98,8 +101,8 @@
                         <h1 class="picture-2-h1">THE RAZER FUJIN PRO</h1>
                         <h2>PLAY HARD. BREATH EASY.</h2>
                         <div class="temp-div">
-                            <h3>Learn More<span class="icon-angle-left"></span></h3>
-                            <h3>Buy <span class="icon-angle-left"></span></h3>
+                            <a href="#" class="picture-2-link-2">Learn More<span class=" icon-angle-left"></span></a>
+                            <a href="#" class="picture-2-link-2">Buy <span class=" icon-angle-left"></span></a>
                         </div>
                     </div>
                 </li>
@@ -111,8 +114,10 @@
                         <h1 class="picture-2-h1">RAZER BLADE 16 & 18 MERCURY</h1>
                         <h2>GET A RAZER GIFT CARD OF UP TO US$400</h2>
                         <div class="temp-div">
-                            <h3>Razer Blade 16<span class="icon-angle-left"></span></h3>
-                            <h3>Razer Blade 18<span class="icon-angle-left"></span></h3>
+                            <a href="#" class="picture-2-link-2">Razer Blade 16<span
+                                    class=" icon-angle-left"></span></a>
+                            <a href="#" class="picture-2-link-2">Razer Blade 18<span
+                                    class=" icon-angle-left"></span></a>
                         </div>
                     </div>
                 </li>
@@ -124,7 +129,7 @@
                             alt="img" class="picture-2-img">
                         <h1 class="picture-2-h1">DOLCE&GABBANA | RAZER</h1>
                         <h2>STYLED TO WIN</h2>
-                        <h3>Learn More<span class="icon-angle-left"></span></h3>
+                        <a href="#" class="picture-2-link-2">Learn More<span class=" icon-angle-left"></span></a>
                     </div>
                 </li>
                 <li class="picture-2-li">
@@ -135,7 +140,7 @@
                             alt="img" class="picture-2-img">
                         <h1 class="picture-2-h1">RAZER VIPER MINI SIGNATURE EDITION</h1>
                         <h2>ESPORTS HARDWARE PIECE OF THE YEAR</h2>
-                        <h3>Vote for Us<span class="icon-angle-left"></span></h3>
+                        <a href="#" class="picture-2-link-2">Vote for Us<span class=" icon-angle-left"></span></a>
                     </div>
                 </li>
                 <li class="picture-2-li">
@@ -146,7 +151,7 @@
                             alt="img" class="picture-2-img">
                         <h1 class="picture-2-h1">DECK THE HALLS WITH SNEKI SNEK</h1>
                         <h2>DOUBLE THE TREES, DOUBLE THE JOY</h2>
-                        <h3>Learn More<span class="icon-angle-left"></span></h3>
+                        <a href="#" class="picture-2-link-2">Learn More<span class=" icon-angle-left"></span></a>
                     </div>
                 </li>
                 <li class="picture-2-li">
@@ -157,14 +162,95 @@
                             alt="img" class="picture-2-img">
                         <h1 class="picture-2-h1">GETTING A RAZER GIFT CARD?</h1>
                         <h2>GET A BONUS ONE ON US</h2>
-                        <h3>Shop Now<span class="icon-angle-left"></span></h3>
+                        <a href="#" class="picture-2-link-2">Shop Now<span class="icon-angle-left"></span></a>
                     </div>
                 </li>
             </ul>
         </section>
-
-        <script src="script.js"></script>
+        <footer>
+            <div class="footer">
+                <div class="footer-top">
+                    <div class="footer-header">Shop</div>
+                    <div class="footer-list">
+                        <div class="footer-item"><a href="#">RazerStores</a></div>
+                        <div class="footer-item"><a href="#">RazerCafe</a></div>
+                        <div class="footer-item"><a href="#">Store Locater</a></div>
+                        <div class="footer-item"><a href="#">Purchase Programs</a></div>
+                        <div class="footer-item"><a href="#">Education</a></div>
+                        <div class="footer-item"><a href="#">Exclusives</a></div>
+                        <div class="footer-item"><a href="#">RazerStore Rewards</a></div>
+                        <div class="footer-item"><a href="#">Newsletter</a></div>
+                    </div>
+                </div>
+                <div class="footer-top">
+                    <div class="footer-header">Explore</div>
+                    <div class="footer-list">
+                        <div class="footer-item"><a href="#">Technology</a></div>
+                        <div class="footer-item"><a href="#">Chroma RGB</a></div>
+                        <div class="footer-item"><a href="#">Concepts</a></div>
+                        <div class="footer-item"><a href="#">Esports</a></div>
+                        <div class="footer-item"><a href="#">Collabs</a></div>
+                    </div>
+                </div>
+                <div class="footer-top">
+                    <div class="footer-header">Support</div>
+                    <div class="footer-list">
+                        <div class="footer-item"><a href="#">Get Help</a></div>
+                        <div class="footer-item"><a href="#">Registration & Warranty</a></div>
+                        <div class="footer-item"><a href="#">RazerStore Support</a></div>
+                        <div class="footer-item"><a href="#">RazerCare</a></div>
+                        <div class="footer-item"><a href="#">Manage Razer ID</a></div>
+                        <div class="footer-item"><a href="#">Support Videos</a></div>
+                        <div class="footer-item"><a href="#">Accesability Statement</a></div>
+                    </div>
+                </div>
+                <div class="footer-top">
+                    <div class="footer-header">Company</div>
+                    <div class="footer-list">
+                        <div class="footer-item"><a href="#">About us</a></div>
+                        <div class="footer-item"><a href="#">Careers</a></div>
+                        <div class="footer-item"><a href="#">Newsroom</a></div>
+                        <div class="footer-item"><a href="#">zVentures</a></div>
+                        <div class="footer-item"><a href="#">Contact Us</a></div>
+                    </div>
+                </div>
+                <div class="footer-top">
+                    <div class="footer-header">Follow Us</div>
+                    <div class="footer-list">
+                        <div class="footer-item"><a href="#">Facebook</a></div>
+                        <div class="footer-item"><a href="#">Instagram</a></div>
+                        <div class="footer-item"><a href="#">X</a></div>
+                        <div class="footer-item"><a href="#">Youtube</a></div>
+                        <div class="footer-item"><a href="#">Tik Tok</a></div>
+                        <div class="footer-item"><a href="#">Twitch</a></div>
+                        <div class="footer-item"><a href="#">Discord</a></div>
+                    </div>
+                </div>
+                <div class="footer-top col-last">
+                    <span>FOR GAMERS. BY GAMERS.™</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="copyright">
+                    <span>Copyright © 2023 Razer Inc. All rights reserved.</span>
+                </div>
+                <div class="legal-terms">
+                    <ul>
+                        <li><a href="#">Site Map</a></li>
+                        <li><a href="#">Legal Terms</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Cookie Settings</a></li>
+                    </ul>
+                </div>
+                <div class="location">
+                    <div class="country"> United States</div>
+                    |
+                    <a href="#">Change location ></a>
+                </div>
+            </div>
+        </footer>
     </main>
+    <script src="script.js"></script>
 </body>
 
 
